--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm i express moment nodemon
-    - run: npm install nodemon -D` 
-    - run: nodemon index.js
+    - run: npm ci
+    - run: npm test
